--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,7 +45,7 @@ jobs:
             # 源目录，相对于$GITHUB_WORKSPACE根目录的路径
             SOURCE: "dist/" 
             # 服务器域名
-            REMOTE_HOST: "49.233.31.160" 
+            REMOTE_HOST: ${{ secrets.HOST }} 
             # 腾讯云默认用户名为root
             REMOTE_USER: "root" 
             # 目标目录
