--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,7 @@ jobs:
           CI: true
       # 部署到腾讯云服务器
       - name: Deploy to Server
-        uses: burnett01/rsync-deployments@4.0
+        uses: easingthemes/ssh-deploy@v2.0.7
         env:
             # 本地.ssh文件下的私钥id_rsa，存在secrets的TOKEN中
             SSH_PRIVATE_KEY: ${{ secrets.TOKEN }} 
